--- a/index.html
+++ b/index.html
@@ -3,21 +3,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Olga Maria Torcates</title>
-  </head>
-  <body>
-    <main>
-      <div>
-        <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="../proyecto-1-cod-latam/css/styles.css" />
         <style>
           @import url("https://fonts.googleapis.com/css2?family=Jost:wght@100;400;800&family=Playfair+Display:wght@700&display=swap");
         </style>
+  </head>
+  <body>
+  <header>
+    <ul>
+      <ol class="columna">
+        <a href="index.html">
+          <img id="logo" src="../proyecto-1-cod-latam/img/logo/Olga.jpg" />
+        <br/>
+        </a>
+      </ol>
+        <nav id="encabezado">
+              <ol class="columna">
+                <a class="inicio" href="index.html">INICIO</a>
+              </ol>
+              <ol class="columna">
+                <a class="contacto" href="#piePagina">CONTACTO</a>
+              </ol> 
+            </ul>
+          </nav>
+      </header> 
 
-        <img src="../proyecto-1-cod-latam/img/logo/Olga.jpg" />
-
-        <a class="inicio" href="index.html">INICIO</a>
-        <a class="contacto" href="#piePagina" target="_blank">CONTACTO</a>
-        <hr />
+      <main>
         <div class="article">
+          <br /><br /><br /><br /><br /><br /><br />
           <section id="primerParrafo">
             <div class="centrar">
               <img src="../proyecto-1-cod-latam/img/foto.jpg" class="circulo" />
@@ -26,15 +39,15 @@
               <h1>Hola! Soy Olga Maria Torcates</h1>
               <br />
               <p>
-                Mi nombre es Olga Maria Torcates, Venezolana con tres aÑos en este
-                pais, radicada en la provincia Santa Fe , en Rosario. Soy
-                profesional universitaria: Licenciada en Contaduria Publica ,
+                Mi nombre es Olga Maria Torcates, Venezolana con tres años en este
+                pais, radicada en la provincia Santa Fe,  en Rosario. Soy
+                profesional universitaria: Licenciada en Contaduria Publica, 
                 Licenciada en Administracion Comercial , con Postgrado en Gerencia
                 Tributaria. Actualmente me encuentro capacitandome en el area IT,
                 considero que es un aporte valioso para ampliar los conocimientos
-                que poseo, bueno aparte de eso me gusta y mis aspiraciones son
-                seguir estudiando para prepararme mas e incursionar en el area del
-                Testing , siendo mis aspiraciones llegar a la automatizacion.
+                que poseo, aparte de eso me gusta y mis aspiraciones son
+                seguir estudiando para prepararme mas;  siendo mis aspiraciones llegar 
+                a la automatizacion.
               </p>
             </div>
 
@@ -52,18 +65,18 @@
               <br />
               <br />
               <p>
-                Mi perfil profesional.Analista QA Lcda en Contaduria Pública,
+                Mi perfil profesional, Analista QA Lcda en Contaduria Pública,
                 Lcda en Administracion Comercial, con Post grado en Gerencia
-                Tributatia Analista QA comprometida en garantizar la calidad de
-                un producto de software con conocimiento y buen manejo en
-                metodologías ágiles Scrum.. Contador Público con amplia
-                experiencia en la Administración Privada y en la Administración.
+                Tributatia.  Analista QA comprometida en garantizar la calidad de
+                un producto de Software con conocimiento y buen manejo en
+                metodologías ágiles Scrum. Contador Público con amplia
+                experiencia en la Administración privada y en la Administración publica.
               </p>
 
               <br />
               <br />
-            </div>
-              <ul class="piePagina">
+            </div class="finalPag">
+              <ul id="piePagina">
                 <li>
                   <a href="mailto:olgatorcates99@gmail.com" target="_blank">
                     <img class="mail" src="./img/mail.png" alt="mail" />
